# vim4_npu_applications

densenet_ctc/: CMakeLists.txt  README.md  main.cc  postprocess_util.cc  postprocess_util.h
densenet_ctc/data/: class_name.txt  densenet_ctc_int16.adla
face_recognition/: CMakeLists.txt  README.md  facenet.h  main.cc  retinaface.cc
face_recognition_cap/: CMakeLists.txt  README.md  facenet.cc  main.cc  postprocess_util.cc  postprocess_util.h  retinaface.h
facenet/: CMakeLists.txt  README.md  main.cc  nn_demo.h  postprocess_util.cc  postprocess_util.h
facenet/data/model/: facenet_int8.adla
libadla_interface/: CMakeLists.txt  README.md  main.cc  postprocess_util.cc  postprocess_util.h  test.py
mobilenet_v2/: CMakeLists.txt  README.md  main.c  postprocess_util.c
mobilenet_v2/data/: mobilenetv2_int8.adla
nn_sdk/include/: nn_sdk.h  nn_util.h
retinaface/: CMakeLists.txt  README.md  main.cc  nn_demo.h  postprocess_util.cc  postprocess_util.h
retinaface_cap/: CMakeLists.txt  README.md  main.cc
retinaface_cap/data/: retinaface_int8.adla
vgg16/: CMakeLists.txt  README.md  main.cc  postprocess_util.cc  postprocess_util.h
vgg16/data/: vgg16_int8.adla
yolov3/: CMakeLists.txt  README.md  main.cc  postprocess_util.cc
yolov3_cap/: CMakeLists.txt  README.md  main.cc  postprocess_util.cc
yolov7_tiny/: CMakeLists.txt  README.md  main.cc  postprocess_util.cc
yolov7_tiny_cap/: CMakeLists.txt  README.md
yolov8n/: CMakeLists.txt  README.md  postprocess_util.cc
yolov8n/data/: yolov8n_int8.adla
yolov8n_cap/: CMakeLists.txt  README.md  main.cc  postprocess_util.h
